Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -54,6 +54,9 @@ Patrick Feeney            </a>
                              CV
                           </a></li>
                         <li >
+                            <a href="https://patrickfeeney.github.io/category/blog.html">Blog</a>
+                        </li>
+                        <li >
                             <a href="https://patrickfeeney.github.io/category/courses.html">Courses</a>
                         </li>
                         <li >
