--- a/authors.html
+++ b/authors.html
@@ -54,6 +54,9 @@ Patrick Feeney            </a>
                              CV
                           </a></li>
                         <li >
+                            <a href="https://patrickfeeney.github.io/category/blog.html">Blog</a>
+                        </li>
+                        <li >
                             <a href="https://patrickfeeney.github.io/category/courses.html">Courses</a>
                         </li>
                         <li >
@@ -75,7 +78,7 @@ Patrick Feeney            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Patrick Feeney</h1>
-        <li><a href="https://patrickfeeney.github.io/author/patrick-feeney.html">Patrick Feeney</a> (8)</li>
+        <li><a href="https://patrickfeeney.github.io/author/patrick-feeney.html">Patrick Feeney</a> (9)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
