Generate Pelican site

--- a/lecturer-for-discrete-mathematics-at-tufts-university.html
+++ b/lecturer-for-discrete-mathematics-at-tufts-university.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="Patrick Feeney" />
         <meta name="keywords" content="news" />
-        <meta name="description" content="As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams, and held office hours for CS 61. The course covered proof writing, propositional logic, counting, relations, and graph theory." />
+        <meta name="description" content="As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams, and held office hours for CS 61. The course covered proof writing, propositional logic, combinatorics, relations, graph theory, and abstract algebra." />
 
         <meta property="og:site_name" content="Patrick Feeney" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Lecturer for Discrete Mathematics at Tufts University"/>
         <meta property="og:url" content="https://patrickfeeney.github.io/lecturer-for-discrete-mathematics-at-tufts-university.html"/>
-        <meta property="og:description" content="As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams, and held office hours for CS 61. The course covered proof writing, propositional logic, counting, relations, and graph theory."/>
+        <meta property="og:description" content="As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams, and held office hours for CS 61. The course covered proof writing, propositional logic, combinatorics, relations, graph theory, and abstract algebra."/>
         <meta property="article:published_time" content="2024-05-22" />
             <meta property="article:section" content="courses" />
             <meta property="article:tag" content="news" />
@@ -114,7 +114,7 @@ Patrick Feeney            </a>
 </footer><!-- /.post-info -->                    </div>
                 </div>
                 <p>As a lecturer for the summer of 2024, I gave active-learning focused lectures, developed exams,  and held office hours for CS 61.
-The course covered proof writing, propositional logic, counting, relations, and graph theory.</p>
+The course covered proof writing, propositional logic, combinatorics, relations, graph theory, and abstract algebra.</p>
             </div>
             <!-- /.entry-content -->
         </article>
