Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -78,6 +78,7 @@ Patrick Feeney            </a>
     <div class="row">
         <div class="col-sm-9">
   <h1>Authors on Patrick Feeney</h1>
+        <li><a href="https://patrickfeeney.github.io/author/michael-c-hughes.html">Michael C. Hughes</a> (1)</li>
         <li><a href="https://patrickfeeney.github.io/author/patrick-feeney.html">Patrick Feeney</a> (9)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
