--- a/learning-embedding-spaces-with-metrics-via-contrastive-learning.html
+++ b/learning-embedding-spaces-with-metrics-via-contrastive-learning.html
@@ -12,13 +12,13 @@
 <link rel="canonical" href="https://patrickfeeney.github.io/learning-embedding-spaces-with-metrics-via-contrastive-learning.html">
 
         <meta name="author" content="Patrick Feeney" />
-        <meta name="description" content="Written for the blogpost track of the ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024. Contrastive learning encompasses a variety of methods that learn a constrained embedding space to solve a task. The embedding space is constrained such that a chosen metric, a function that measures …" />
+        <meta name="description" content="Published in the blogpost track of the ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024. Written by Patrick Feeney and Michael C. Hughes. Contrastive learning encompasses a variety of methods that learn a constrained embedding space to solve a task. The embedding space is constrained such …" />
 
         <meta property="og:site_name" content="Patrick Feeney" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Learning Embedding Spaces with Metrics via Contrastive Learning"/>
         <meta property="og:url" content="https://patrickfeeney.github.io/learning-embedding-spaces-with-metrics-via-contrastive-learning.html"/>
-        <meta property="og:description" content="Written for the blogpost track of the ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024. Contrastive learning encompasses a variety of methods that learn a constrained embedding space to solve a task. The embedding space is constrained such that a chosen metric, a function that measures …"/>
+        <meta property="og:description" content="Published in the blogpost track of the ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024. Written by Patrick Feeney and Michael C. Hughes. Contrastive learning encompasses a variety of methods that learn a constrained embedding space to solve a task. The embedding space is constrained such …"/>
         <meta property="article:published_time" content="2024-06-28" />
             <meta property="article:section" content="blog" />
             <meta property="article:author" content="Patrick Feeney" />
@@ -109,7 +109,8 @@ Patrick Feeney            </a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p><em>Written for the blogpost track of the <a href="https://gram-workshop.github.io/index.html">ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024</a>.</em></p>
+                <p><em>Published in the blogpost track of the <a href="https://gram-workshop.github.io/index.html">ELLIS Workshop on Geometry-grounded Representation Learning and Generative Modeling at ICML 2024</a>.
+Written by Patrick Feeney and Michael C. Hughes.</em></p>
 <p>Contrastive learning encompasses a variety of methods that learn a constrained embedding space to solve a task. The embedding space is constrained such that a chosen metric, a function that measures the distance between two embeddings, satisfies some desired property, usually that small distances imply a shared class. Contrastive learning underlies many self-supervised methods, such as MoCo <a href='#he_momentum_2020' id='ref-he_momentum_2020-1'>(He et al., 2020)</a>, <a href='#chen_empirical_2021' id='ref-chen_empirical_2021-1'>(Chen et al., 2021)</a>, SimCLR <a href='#chen_simple_2020' id='ref-chen_simple_2020-1'>(Chen et al., 2020)</a>, <a href='#chen_big_2020' id='ref-chen_big_2020-1'>(Chen et al., 2020)</a>, and BYOL <a href='#grill_bootstrap_2020' id='ref-grill_bootstrap_2020-1'>(Grill et al., 2020)</a>, as well as supervised methods such as SupCon <a href='#khosla_supervised_2020' id='ref-khosla_supervised_2020-1'>(Khosla et al., 2020)</a> and SINCERE <a href='#feeney_sincere_2024' id='ref-feeney_sincere_2024-1'>(Feeney and Hughes, 2024)</a>.</p>
 <p>In contrastive learning, there are two components that determine the constraints on the learned embedding space: the similarity function and the contrastive loss. The similarity function takes a pair of embedding vectors and quantifies how similar they are as a scalar. The contrastive loss determines which pairs of embeddings have similarity evaluated and how the resulting set of similarity values are used to measure error with respect to a task, such as classification. Backpropagating to minimize this error causes a model to learn embeddings that best satisfy the constraints induced by the similarity function and contrastive loss.</p>
 <p>This blog post examines how similarity functions and contrastive losses affect the learned embedding spaces. We first examine the different choices for similarity functions and contrastive losses. Then we conclude with a brief case study investigating the effects of different similarity functions on supervised contrastive learning.</p>
